shift to static, not fixed, navbar

--- a/app/assets/stylesheets/bootstrap_overrides.css
+++ b/app/assets/stylesheets/bootstrap_overrides.css
@@ -1,5 +1,4 @@
 body {
-  padding-top: 28px;
   padding-bottom: 40px;
   background: #1d4fa9;
 }
